--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,14 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "lideresas/wsgi.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb"
-      }
+      "src": "vercel_app.py",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "lideresas/wsgi.py"
+      "dest": "vercel_app.py"
     }
   ]
 }
