--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,17 @@
     {
       "src": "vercel_app.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "main/static/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/main/static/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "vercel_app.py"
