--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 DATABASE_URL=postgresql://neondb_owner:npg_lJpzhHaS62Ny@ep-holy-forest-adubyu2d-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require
 SECRET_KEY=django-insecure-0tgb5mg#$xx5pnq49nt&#su0^h164hqoeh)&vol2ch4mdrq$1f
 DEBUG=False
-
+CLOUDINARY_CLOUD_NAME=dcf1jabap
+CLOUDINARY_API_KEY=298837481175512
+CLOUDINARY_API_SECRET=L4Fa6DEMm30kBCZkcFnjH8PjRHU
